[gd_scene load_steps=23 format=3 uid="uid://df88ub57bgkgd"]

[ext_resource type="Script" path="res://scripts/mage.gd" id="1_rpk5o"]
[ext_resource type="Texture2D" uid="uid://f2wuxe8481mn" path="res://assets/characterMage/32x32/Char_005_Idle.png" id="1_yrchu"]
[ext_resource type="Texture2D" uid="uid://w1c8y2xs41m0" path="res://assets/characterMage/Mage_dying.png" id="2_25kcp"]
[ext_resource type="Texture2D" uid="uid://dbwr7acaye6a5" path="res://assets/characterMage/Mage_maging.png" id="3_71juk"]
[ext_resource type="Texture2D" uid="uid://buqtp3mmbey0i" path="res://assets/texture/textbox.png" id="3_ufwq1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2kx8y"]
atlas = ExtResource("2_25kcp")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8372o"]
atlas = ExtResource("2_25kcp")
region = Rect2(160, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywbll"]
atlas = ExtResource("2_25kcp")
region = Rect2(320, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyogh"]
atlas = ExtResource("2_25kcp")
region = Rect2(480, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6hpu"]
atlas = ExtResource("2_25kcp")
region = Rect2(640, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x434"]
atlas = ExtResource("2_25kcp")
region = Rect2(800, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_o51x3"]
atlas = ExtResource("1_yrchu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1vxa"]
atlas = ExtResource("1_yrchu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf0uo"]
atlas = ExtResource("1_yrchu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_710nj"]
atlas = ExtResource("1_yrchu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfj5o"]
atlas = ExtResource("3_71juk")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln86b"]
atlas = ExtResource("3_71juk")
region = Rect2(160, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_masvi"]
atlas = ExtResource("3_71juk")
region = Rect2(320, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejya6"]
atlas = ExtResource("3_71juk")
region = Rect2(480, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3axvt"]
atlas = ExtResource("3_71juk")
region = Rect2(640, 0, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_b562u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kx8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8372o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywbll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyogh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6hpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x434")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o51x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1vxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf0uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_710nj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfj5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln86b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_masvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejya6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3axvt")
}],
"loop": true,
"name": &"magic",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txw6l"]
size = Vector2(10, 20)

[node name="Mage" type="StaticBody2D"]
collision_layer = 3
script = ExtResource("1_rpk5o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -18)
sprite_frames = SubResource("SpriteFrames_b562u")
animation = &"death"
autoplay = "magic"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_txw6l")

[node name="BalaoFala" type="Label" parent="."]
top_level = true
offset_left = -32.0
offset_top = -60.0
offset_right = 8.0
offset_bottom = -37.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerVerificaItem" type="Timer" parent="."]
wait_time = 0.578
one_shot = true

[node name="TimerStartTalking" type="Timer" parent="."]
wait_time = 1.346
one_shot = true

[node name="TimerStopTalking" type="Timer" parent="."]
wait_time = 1.105
one_shot = true

[node name="RequestItemUI" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="RequestItemUI"]
visibility_layer = 2
z_index = 11
offset_left = -13.0
offset_top = -76.0
offset_right = 13.0
offset_bottom = -51.0
expand_mode = 2
stretch_mode = 5

[node name="NinePatchRect" type="NinePatchRect" parent="RequestItemUI"]
show_behind_parent = true
z_index = 10
offset_left = -20.0
offset_top = -89.0
offset_right = 20.0
offset_bottom = -49.0
texture = ExtResource("3_ufwq1")
region_rect = Rect2(0, 0, 47.0891, 48)

[connection signal="timeout" from="TimerVerificaItem" to="." method="_on_timer_item_verify_timeout"]
[connection signal="timeout" from="TimerStartTalking" to="." method="_on_timer_start_talking_timeout"]
[connection signal="timeout" from="TimerStopTalking" to="." method="_on_timer_stop_talking_timeout"]
